# project23

./: .gitignore  README.md
client/: pubspec.yaml
client/web/: client.css  client.dart  client.html  loader_manager.dart  ressource_manager.dart  sprite_manager.dart  sprites.json  window.dart
client/web/core/: core.dart  draw_frame.dart  draw_layer.dart  draw_manager.dart  draw_pane.dart  drawable_item.dart  event.dart  inner_window_manager.dart  keyboard_manager.dart  resolution_manager.dart  window.dart
client/web/game/: camera.dart  case.dart  game.dart  gameboard.dart  gamescreen.dart  hud.dart  player.dart  ressource_manager.dart  ressource_manager.html  test.css  test.html
client/web/ui/: component.dart  component_drawable.dart  event.dart  selectable_manager.dart  ui.dart
client/web/ui/component/: bidon.dart  button.dart  checkbox_container.dart  combobox.dart  component.dart  container.dart  cursor.dart  formated_label.dart  inner_window.dart  interactive_component.dart  label.dart  scroll_bar.dart  scroll_pane.dart  selectable_component.dart  text.dart  text_area.dart  text_field.dart  text_input.dart  text_label.dart  toggleable_component.dart
client/web/ui/layout/: absolute_layout.dart  border_layout.dart  center_layout.dart  layout.dart  passif_layout.dart  relative_layout.dart  vertical_divide_layout.dart  vertical_gap_layout.dart  vertical_layout.dart  vertical_passif_layout.dart
client/web/ui/screen/: screen_menu_unlogged.dart  screen_menu_unlogged_home.dart
client/web/ui/style/: bidon_style.dart  button_style.dart  combobox_style.dart  component_style.dart  container_style.dart  cursor_style.dart  empty_style.dart  formated_label_style.dart  inner_window_style.dart  interactive_component_style.dart  label_style.dart  scroll_bar_style.dart  scroll_pane_style.dart  selectable_component_style.dart  text_area_style.dart  text_field_style.dart  text_input_style.dart  text_label_style.dart  text_style.dart  toggleable_component_style.dart
client/web/ui/style/basic/: basic_button_style.dart  basic_combobox_style.dart  basic_container_style.dart  basic_formated_label_style.dart  basic_inner_window_style.dart  basic_scroll_bar_style.dart  basic_scroll_pane_style.dart  basic_style_manager.dart  basic_text_style.dart  (+3 more)
client/web/utils/: coordinates_2d.dart  rect.dart  utils.dart  vector_2d.dart
prototype/benchmark-canvas-dart/test/web/: test.dart  test.html
prototype/benchmark-canvas-js/: canvas.js  canvas.js~  index.html  main.css
prototype/benchmark-canvas-perf/: canvas.js  index.html
prototype/design-1/: proto-menu-1.psd
prototype/design-1/ui/: button-preview.psd  button-sprite.psd  checkbox-preview.psd  checkbox-sprite.psd  combobox-sprite.psd  menu-button-sprite-current.psd  radio-button-preview.psd  textfield-sprite.psd
server/: CMakeLists.txt
server/cmake/: BuildType.cmake  Dependence.cmake  Module.cmake  TypeSize.cmake
server/include/global/: Header.h
server/include/global/compiler/: gcc.h
server/layers/low_level/: CMakeLists.txt
server/layers/low_level/asm/include/cliff/asm/: Asm.h
server/layers/low_level/low_level/include/cliff/low_level/: Header.h
server/layers/low_level/program_control/include/cliff/program_control/: Assert.h  BuildType.h  Context.h  Entry.h  Exception.h  Exit.h
server/layers/low_level/program_control/src/: Context.cpp  Entry.cpp  Exit.cpp
server/layers/low_level/tests/: main.cpp
server/layers/low_level/type/include/cliff/type/: Character.h  PrimitiveType.h  StringFunction.h  TypeToType.h
server/layers/low_level/type/src/: Character.cpp  PrimitiveType.cpp  StringFunction.cpp
server/layers/platform_independence/: CMakeLists.txt
server/layers/platform_independence/multi/console/include/cliff/console/: ConsoleHeader.h
server/layers/platform_independence/multi/platform_independence/include/cliff/platform_independence/: Header.h  PlatformIndependenceMulti.h
server/layers/platform_independence/multi/platform_independence/src/: PlatformIndependenceMulti.cpp
server/layers/platform_independence/tests/: main.cpp
server/layers/platform_independence/unix/console/include/cliff/console/: Console.h
server/layers/platform_independence/unix/console/src/: Console.cpp
server/layers/platform_independence/unix/platform_independence/include/cliff/platform_independence/: PlatformIndependenceSpecific.h
server/layers/platform_independence/unix/platform_independence/src/: PlatformIndependenceSpecific.cpp
server/layers/platform_independence/win32/console/include/cliff/console/: Console.h~
server/layers/platform_independence/win32/console/src/: Console.cpp
server/layers/platform_independence/win32/platform_independence/include/cliff/platform_independence/: PlatformIndependenceSpecific.h
server/layers/platform_independence/win32/platform_independence/src/: PlatformIndependenceSpecific.cpp
server/module/collection/: CMakeLists.txt
server/module/collection/include/collection/: AllocPolicies.h  AssignPolicies.h  Buffer.h  Character.h  Conversion.h  Header.h  Iterable.h  Stack.h  Stream.h  StreamModifier.h  String.h
server/module/collection/include/collection/exception/: OutOfRangeException.h
server/module/collection/src/: Buffer.cpp  Conversion.cpp  StreamModifier.cpp
server/module/core/: CMakeLists.txt
server/module/core/include/core/: Core.h  Header.h  ThirdPart.h
server/module/core/src/: Core.cpp
server/module/core/third_part/win32/src/: ThirdPart.cpp
server/module/output/: CMakeLists.txt
server/module/output/include/output/: AssignedOutputStream.h  ConsoleIO.h  Header.h  LogManager.h  LogOutput.h  Report.h
server/module/output/src/: LogManager.cpp  LogOutput.cpp
server/module/output/third_part/win32/include/output/: ReportWin32.h
server/module/output/third_part/win32/src/: ConsoleIO.cpp  Report.cpp  ReportWin32.cpp
server/module/utility/: CMakeLists.txt
server/module/utility/include/utility/: Conversion.h  Header.h  NonCopyable.h  Singleton.h  SingletonManager.h
server/module/utility/src/: Conversion.cpp  NonCopyable.cpp  SingletonManager.cpp
server/src/: main.cpp
(+1 files in other folders)
